# assistant/docs/swagger.json
@@ -384,7 +384,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/llmproxy.proxyChatRequest"
+                            "type": "object"
                         }
                     }
                 ],
@@ -1608,21 +1608,6 @@
         }
     },
     "definitions": {
-        "llmproxy.proxyChatRequest": {
-            "type": "object",
-            "properties": {
-                "messages": {
-                    "type": "array",
-                    "items": {}
-                },
-                "model": {
-                    "type": "string"
-                },
-                "stream": {
-                    "type": "boolean"
-                }
-            }
-        },
         "response.Response": {
             "type": "object",
             "properties": {
